# FastAPI_RestAPI_Project

./: .gitignore  auth_routes.py  config.py  dependencies.py  main.py  models.py  orders_routes.py  password_crypto.py  pyproject.toml  schemas.py  testes.py
alembic/versions/: 4045fabdef29_initial_migration.py  dfcf1ae9dab8_added_itens_column_in_table_pedido.py
